--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=gc-${spring.profiles.active}
 
 # Debugging on
-logging.level.io.axoniq.demo=debug
+logging.level.io.defter.core.app=trace
 
 # We look for Axon Server locally, unless we find a PCF Binding for AxonServer
 axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
@@ -11,7 +11,7 @@ axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 spring.main.web-application-type=none
 
 # The default profiles are "all of them"
-spring.profiles.active=command,query,gui
+spring.profiles.active=command,query,gui,client
 
 spring.datasource.url=jdbc:h2:./database;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
 spring.jpa.hibernate.ddl-auto=update
