--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
 		<axon.version>4.1.1</axon.version>
 
-		<vaadin.version>8.2.0</vaadin.version>
+		<vaadin.version>13.0.2</vaadin.version>
         <lombok.version>1.18.0</lombok.version>
 	</properties>
 
@@ -72,6 +72,11 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+
 		<!-- Spring Boot with JPA -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -83,6 +88,18 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- Graphql-->
+		<dependency>
+			<groupId>com.graphql-java</groupId>
+			<artifactId>graphql-spring-boot-starter</artifactId>
+			<version>5.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.graphql-java</groupId>
+			<artifactId>graphql-java-tools</artifactId>
+			<version>5.2.4</version>
+		</dependency>
 
 		<!-- This will of course be an Axon application. We're adding Kotlin to easily
 		     write command and event classes. -->
@@ -101,9 +118,13 @@
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-spring-boot-starter</artifactId>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.vaadin</groupId>-->
+<!--			<artifactId>vaadin-push</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>com.vaadin</groupId>
-			<artifactId>vaadin-push</artifactId>
+			<artifactId>vaadin-core</artifactId>
 		</dependency>
 
         <dependency>
