remove vaadin gui and add graphql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 spring.main.web-application-type=none
 
 # The default profiles are "all of them"
-spring.profiles.active=command,query,gui,client
+spring.profiles.active=command,query,client
 
 spring.datasource.url=jdbc:h2:./database;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
 spring.jpa.hibernate.ddl-auto=update
