--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,10 @@ spring.main.web-application-type=none
 # The default profiles are "all of them"
 spring.profiles.active=command,query,client
 
-spring.datasource.url=jdbc:h2:./database;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
+# url jdbc:postgresql://localhost:5432/coredata?user=d&password=ak2na9axsn2eqds034;
+spring.datasource.url=jdbc:postgresql://localhost:5432/coredata
+spring.datasource.username=defteradmin
+spring.datasource.password=ak2na9axsn2eqds034
 spring.jpa.hibernate.ddl-auto=update
 
 management.endpoint.health.show-details=always
