current user and add more clear error messages to split add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,8 @@ spring.datasource.username=defteradmin
 spring.datasource.password=ak2na9axsn2eqds034
 spring.jpa.hibernate.ddl-auto=update
 
+# Disables hibernate warning on boot
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
