add scheduled event infra

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 spring.main.web-application-type=none
 
 # The default profiles are "all of them"
-spring.profiles.active=command,query,client
+spring.profiles.active=command,query,client,peripheral
 
 # url jdbc:postgresql://localhost:5432/coredata?user=d&password=ak2na9axsn2eqds034;
 spring.datasource.url=jdbc:postgresql://localhost:5432/coredata
@@ -24,3 +24,5 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
+
+axon.eventhandling.processors.exchange-rates.mode=subscribing
