--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,4 @@ management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 
 axon.eventhandling.processors.exchange-rates.mode=subscribing
+axon.eventhandling.processors.notification-processor.mode=subscribing
